--- a/src/app/modules/misc/component/misc-settings/misc-settings.component.html
+++ b/src/app/modules/misc/component/misc-settings/misc-settings.component.html
@@ -39,32 +39,14 @@
     <app-card [title]="'misc.stash' | translate">
       <div class="row">
         <div class="col">
-          <div class="row">
-            <mat-form-field class="col-lg-6">
-              <mat-label>{{ 'misc.navigation' | translate }}</mat-label>
-              <mat-select [(value)]="settings.miscStashNavigationMode">
-                <mat-option *ngFor="let navigation of navigations.keys" [value]="navigation">
-                  {{
-                    'misc.navigations.' + (navigations.values[navigation] | lowercase) | translate
-                  }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field class="col-lg-6">
-              <mat-label>Modifier + SCROLL</mat-label>
-              <mat-select [(value)]="settings.miscStashNavigationModifier">
-                <mat-option value="CmdOrCtrl">
-                  CmdOrCtrl
-                </mat-option>
-                <mat-option value="Shift">
-                  Shift
-                </mat-option>
-                <mat-option value="Alt">
-                  Alt
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
+          <mat-form-field>
+            <mat-label>{{ 'misc.navigation' | translate }} (CTRL + SCROLL)</mat-label>
+            <mat-select [(value)]="settings.miscStashNavigationMode">
+              <mat-option *ngFor="let navigation of navigations.keys" [value]="navigation">
+                {{ 'misc.navigations.' + (navigations.values[navigation] | lowercase) | translate }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
           <app-accelerator
             [label]="'misc.highlight' | translate"
             [(value)]="settings.miscStashHighlightKeybinding"
