--- a/src/app/shared/module/poe/component/item-frame-properties/item-frame-properties.component.html
+++ b/src/app/shared/module/poe/component/item-frame-properties/item-frame-properties.component.html
@@ -190,30 +190,7 @@
     </ng-container>
     <ng-container *ngSwitchCase="'gemExperience'">
       <ng-container
-        *ngTemplateOutlet="value; context: { prop: prop, name: property, key: 'Experience' }"
-      >
-      </ng-container>
-    </ng-container>
-    <ng-container *ngSwitchCase="'durability'">
-      <ng-container
-        *ngTemplateOutlet="
-          value;
-          context: {
-            prop: prop,
-            name: property,
-            key: 'ItemDisplayHarvestBoosterUses',
-            range: false
-          }
-        "
-      >
-      </ng-container>
-    </ng-container>
-    <ng-container *ngSwitchCase="'storedExperience'">
-      <ng-container
-        *ngTemplateOutlet="
-          value;
-          context: { prop: prop, name: property, key: 'ItemDisplayStoredExperience', range: false }
-        "
+        *ngTemplateOutlet="query; context: { prop: prop, name: property, key: 'Experience' }"
       >
       </ng-container>
     </ng-container>
