--- a/src/app/shared/module/poe/component/item-frame-stats/item-frame-stats.component.html
+++ b/src/app/shared/module/poe/component/item-frame-stats/item-frame-stats.component.html
@@ -4,17 +4,8 @@
       <div class="blue">
         <ng-container *ngTemplateOutlet="statQuery; context: { stat: stat }"></ng-container>
       </div>
-      <app-item-frame-separator
-        [item]="item"
-        *ngIf="
-          last &&
-          (groups.implicit ||
-            groups.fractured ||
-            groups.explicit ||
-            groups.monster ||
-            groups.crafted)
-        "
-      >
+      <app-item-frame-separator [item]="item"
+                                *ngIf="last && (groups.implicit || groups.fractured || groups.explicit || groups.monster || groups.crafted)">
       </app-item-frame-separator>
     </ng-container>
   </ng-container>
@@ -23,10 +14,8 @@
       <div class="purpel">
         <ng-container *ngTemplateOutlet="statQuery; context: { stat: stat }"></ng-container>
       </div>
-      <app-item-frame-separator
-        [item]="item"
-        *ngIf="last && (groups.fractured || groups.explicit || groups.monster || groups.crafted)"
-      >
+      <app-item-frame-separator [item]="item"
+                                *ngIf="last && (groups.fractured || groups.explicit || groups.monster || groups.crafted)">
       </app-item-frame-separator>
     </ng-container>
   </ng-container>
