--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,13 +8,14 @@ $fractured: #a29162;
 $monster: #bd1818;
 
 $purple: #88f;
-$blue: #b4b4ff;
+$blue: #4c75fa;
 $yellow: #ff7;
-$orange: #af6025;
+$orange: #ca9a16;
 $light-orange: #aa9e82;
 $red: #e63244;
 $pink: #e745ad;
 $aqua: #1ba29b;
+$green: rgb(35, 182, 35);
 $indigo: #b54bff;
 $black-transparent: rgba(0, 0, 0, 0.8);
 
