--- a/src/app/modules/evaluate/component/evaluate-search/evaluate-search.component.html
+++ b/src/app/modules/evaluate/component/evaluate-search/evaluate-search.component.html
@@ -23,12 +23,7 @@
                     class="clickable values"
                     (click)="onCurrencyClick($event)"
                     (wheel)="onCurrencyWheel($event)"
-                    [title]="
-                      (settings.evaluateBrowserAlwaysExternal
-                        ? 'app.clickable-external-only'
-                        : 'app.clickable'
-                      ) | translate
-                    "
+                    [title]="'app.clickable' | translate"
                   >
                     <div>
                       <app-currency-frame
@@ -90,12 +85,7 @@
               <div
                 class="clickable"
                 (click)="onCurrencyClick($event)"
-                [title]="
-                  (settings.evaluateBrowserAlwaysExternal
-                    ? 'app.clickable-external-only'
-                    : 'app.clickable'
-                  ) | translate
-                "
+                [title]="'app.clickable' | translate"
               >
                 {{ 'evaluate.canceled' | translate }}
               </div>
@@ -115,12 +105,7 @@
           <div
             class="clickable"
             (click)="onCurrencyClick($event)"
-            [title]="
-              (settings.evaluateBrowserAlwaysExternal
-                ? 'app.clickable-external-only'
-                : 'app.clickable'
-              ) | translate
-            "
+            [title]="'app.clickable' | translate"
           >
             {{ 'evaluate.empty' | translate }}
           </div>
